# SFML-Clicker

./: .gitignore  CMakeLists.txt  Game.cpp  Game.h  main.cpp
